My third commit

--- a/Learn git.html
+++ b/Learn git.html
@@ -33,4 +33,35 @@ github is an open Source <!-- Version Control System --> VCS (Git)
  <!-- Pull request -->
  tell other about changes to pull it from local to remote
 
+ <!-- Commands to use -->
+
+
+ <!-- -->
+ -> git status
+bring status of the repo on branch master and if there is an comits 
+
+-> git reset head filname.type
+bush back files from stage step
+
+
+-> git add
+push files from loacl to stage step
+
+
+-> git commit -m "some comments"
+push code to stage step
+
+-> git config --global user.email "email@gmail.com"
+
+
+-> git config --global user.name "username"
+
+
+-> git push reomoteName branchName
+
+-> git remote --v 
+to get all repo links
+
+-> git push main master
+
  
