--- a/Learn git.html
+++ b/Learn git.html
@@ -64,4 +64,16 @@ to get all repo links
 
 -> git push main master
 
+
+$ git remote set-url origin http://github.com/YOU/YOUR_REPO
+If the original repository would update often and you want to get those updates from time to time, then instead of editing origin it would be best to add a new remote:
+
+$ git remote add personal http://github.com/YOU/YOUR_REPO
+Or maybe even call the old one upstream:
+
+$ git remote rename origin upstream
+$ git remote add origin http://github.com/YOU/YOUR_REPO
+Then, whenever you want to get changes from upstream, you can do:
+
+$ git fetch upstream
  
